src/dashboard/static/index.css
@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Roboto+Mono:ital,wght@0,400;1,400;1,600;1,700&display=swap");

html,
body {
  background: #f5f6fa;
  min-height: 100vh;
  font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}

body {
  display: flex;
  flex-direction: column;
}

footer {
  flex: 0;
  padding: 3rem 5em;
  font-size: 0.8rem;
}

section {
  padding: 2rem;
  flex: 1;
}

iframe {
  flex: 1;
  border-radius: 6px;
  width: 100%;
}

ol > li {
  padding-left: 0.4rem;
}

.columns {
  display: flex;
  flex: 1;
}

.column {
  flex-basis: 100%;
}

.content {
  line-height: 1.4;
  font-size: 0.9rem;
}

.box {
  min-height: 200px;
  flex: 1;
  border: 2px solid white;
}

@media screen and (min-width: 1024px) {
  .preface {
    margin-right: 5rem;
    flex: 0.5;
  }
}

@media screen and (min-width: 1400px) {
  .preface {
    margin-right: 7rem;
    flex: 0.8;
  }
}

.logs {
  flex: 1;
  font-size: 0.7rem;
  font-family: "Roboto Mono", "Courier New", Courier, monospace;
  padding: 1rem 0.75rem;
  line-height: 1.2;
  background: #3c3c3c;
  color: white;
  border-radius: 6px;
  max-height: min(40vh, 300px);
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}
.logs .step {
  color: #ffd580;
}

.box-label {
  z-index: 50;
  position: absolute;
  font-size: 0.75rem;
  padding: 2px 10px;
  background: rgba(255, 255, 255, 1);
  font-weight: 400;
  font-style: italic;
  font-family: "Roboto Mono";
  color: rgba(84, 84, 84, 0.9);
  border-bottom-right-radius: 6px;
  border-top-left-radius: 6px;
  box-shadow: 0 0 10px -5px rgba(0, 0, 0, 0.5);
  margin: -1px 0 0 -1px;
  text-overflow: ellipsis;
  max-width: 95%;
  overflow-x: hidden;
  white-space: nowrap;
}

.has-new-version {
  animation: tada;
  animation-duration: 0.8s;
  animation-delay: 1s;
  z-index: 999;
}

.is-unavailable {
  z-index: 25;
  background-color: white;
  background-image: linear-gradient(
      45deg,
      rgba(248, 248, 248, 0.5) 25%,
      transparent 25%,
      transparent 75%,
      rgba(248, 248, 248, 0.5) 75%,
      rgba(248, 248, 248, 0.5)
    ),
    linear-gradient(
      45deg,
      rgba(248, 248, 248, 0.5) 25%,
      transparent 25%,
      transparent 75%,
      rgba(248, 248, 248, 0.5) 75%,
      rgba(248, 248, 248, 0.5)
    );
  background-size: 60px 60px;
  background-position: 0 0, 30px 30px;
}

#localhost {
  display: none;
}

